--- a/src/AppBeacon/app/src/main/res/layout/fragment_beacons2.xml
+++ b/src/AppBeacon/app/src/main/res/layout/fragment_beacons2.xml
@@ -9,27 +9,22 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/buttonConfigurarNodo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Configurar Nodo"
-        tools:layout_editor_absoluteX="116dp"
-        tools:layout_editor_absoluteY="639dp" />
-
-    <Button
         android:id="@+id/buttonVerHistorial"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ver Historial"
-        tools:layout_editor_absoluteX="131dp"
-        tools:layout_editor_absoluteY="591dp" />
+        android:layout_width="258dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="8dp"
+        android:text="Ver Historial completo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView3" />
 
     <TextView
         android:id="@+id/textView26"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Índicie de calidad de aire"
+        android:layout_marginTop="24dp"
+        android:text="ICA Media diaria"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,22 +32,23 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/carViewIndiceCalidadAire"
-        android:layout_width="352dp"
-        android:layout_height="153dp"
+        android:layout_width="336dp"
+        android:layout_height="139dp"
+        android:layout_marginTop="24dp"
         app:cardCornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="82dp">
+        app:layout_constraintTop_toBottomOf="@+id/textView26">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#6EC34A">
+            android:background="#7FD15D">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView4"
-                android:layout_width="100dp"
-                android:layout_height="122dp"
+                android:layout_width="93dp"
+                android:layout_height="111dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 app:cardCornerRadius="8dp"
@@ -102,7 +98,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/aliento" />
+                app:srcCompat="@drawable/ic_cool"
+                app:tint="#266723" />
 
             <TextView
                 android:id="@+id/textView24"
@@ -136,24 +133,146 @@
         android:id="@+id/textView30"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Últimas mediciones:"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="271dp" />
+        android:layout_marginTop="32dp"
+        android:text="Última medicion:"
+        app:layout_constraintStart_toStartOf="@+id/cardView3"
+        app:layout_constraintTop_toBottomOf="@+id/cardView8" />
+
+    <TextView
+        android:id="@+id/textView47"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Recomendaciones de Salud:"
+        app:layout_constraintStart_toStartOf="@+id/cardView8"
+        app:layout_constraintTop_toBottomOf="@+id/carViewIndiceCalidadAire" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView3"
         android:layout_width="336dp"
-        android:layout_height="58dp"
+        android:layout_height="41dp"
         android:layout_marginTop="16dp"
-        android:background="#7E2C2C"
+        app:cardCornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView30">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#6EC34A">
+            android:layout_height="match_parent">
 
+            <TextView
+                android:id="@+id/textView35"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:text="Hora:"
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@+id/textView37"
+                app:layout_constraintTop_toTopOf="@+id/textView37" />
+
+            <TextView
+                android:id="@+id/textView36"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="15:35"
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@+id/textView35"
+                app:layout_constraintTop_toTopOf="@+id/textView35" />
+
+            <TextView
+                android:id="@+id/textView37"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:text="25  µg/m3"
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@+id/textView38"
+                app:layout_constraintTop_toTopOf="@+id/textView38" />
+
+            <TextView
+                android:id="@+id/textView38"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:text="Bueno"
+                android:textColor="#7FD15D"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:id="@+id/imageViewConfigurarNodo"
+        android:layout_width="38dp"
+        android:layout_height="36dp"
+        app:layout_constraintEnd_toEndOf="@+id/carViewIndiceCalidadAire"
+        app:layout_constraintTop_toTopOf="@+id/textView26"
+        app:srcCompat="@drawable/ic_gear"
+        app:tint="#FF018786" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView8"
+        android:layout_width="336dp"
+        android:layout_height="179dp"
+        android:layout_marginTop="8dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView47">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView48"
+                android:layout_width="230dp"
+                android:layout_height="57dp"
+                android:layout_marginStart="16dp"
+                android:gravity="center"
+                android:text="Abra las ventanas para traer aire fresco y limpio en el interior"
+                app:layout_constraintStart_toEndOf="@+id/imageView8"
+                app:layout_constraintTop_toTopOf="@+id/imageView8" />
+
+            <TextView
+                android:id="@+id/textView49"
+                android:layout_width="230dp"
+                android:layout_height="57dp"
+                android:layout_marginStart="16dp"
+                android:gravity="center"
+                android:text="Disfruta de actividades al aire libre"
+                app:layout_constraintStart_toEndOf="@+id/imageView11"
+                app:layout_constraintTop_toTopOf="@+id/imageView11" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="62dp"
+                android:layout_height="58dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_open_window"
+                app:tint="#7FD15D" />
+
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="66dp"
+                android:layout_height="55dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView8"
+                app:srcCompat="@drawable/ic_soccer"
+                app:tint="#7FD15D" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
