--- a/src/AppBeacon/app/src/main/res/values-night/themes.xml
+++ b/src/AppBeacon/app/src/main/res/values-night/themes.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryVariant">@color/bar</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/bar</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/bar</item>
         <!-- Status bar color. -->
@@ -18,6 +18,5 @@
         <item name="colorControlNormal">@color/white</item>
         <item name="colorControlActivated">@color/white</item>
     </style>
-
 
 </resources>
