--- a/src/AppBeacon/app/src/main/res/layout/activity_historial_mediciones.xml
+++ b/src/AppBeacon/app/src/main/res/layout/activity_historial_mediciones.xml
@@ -4,16 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityHistorialMediciones">
+    android:background="#FFFFFF"
+    tools:context=".NotificacionesFragment">
 
     <TextView
-        android:id="@+id/textView32"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="116dp"
-        android:text="Historial Mediciones"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/montserrat"
+        android:text="Historial de mediciones"
+        android:textColor="#02424A"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:drawableTint="#F8F4F4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.44"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerMediciones"
+        android:layout_width="417dp"
+        android:layout_height="581dp"
+        android:layout_marginTop="40dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
