--- a/src/AppBeacon/app/src/main/res/layout/activity_historial_mediciones.xml
+++ b/src/AppBeacon/app/src/main/res/layout/activity_historial_mediciones.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    tools:context=".NotificacionesFragment">
+    android:background="#FFFFFF">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="45dp"
         android:fontFamily="@font/montserrat"
         android:text="Historial de mediciones"
         android:textColor="#02424A"
@@ -24,12 +23,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerMediciones"
-        android:layout_width="417dp"
-        android:layout_height="581dp"
-        android:layout_marginTop="40dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/recyclermedis"
+        android:layout_width="412dp"
+        android:layout_height="734dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
