--- a/src/AppBeacon/app/src/main/res/layout/card_medicion.xml
+++ b/src/AppBeacon/app/src/main/res/layout/card_medicion.xml
@@ -26,7 +26,9 @@
                 android:id="@+id/textView35"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_alignTop="@+id/txtmedicion"
+                android:layout_marginStart="23dp"
+                android:layout_toEndOf="@+id/txtmedicion"
                 android:text="Hora:"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/txtmedicion"
@@ -36,7 +38,8 @@
                 android:id="@+id/txthora"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
+                android:layout_alignTop="@+id/textView35"
+                android:layout_toEndOf="@+id/textView35"
                 android:text="15:35"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/textView35"
@@ -46,7 +49,10 @@
                 android:id="@+id/txtmedicion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_alignTop="@+id/txtvalor"
+                android:layout_marginStart="23dp"
+                android:layout_marginTop="6dp"
+                android:layout_toEndOf="@+id/txtvalor"
                 android:text="25  µg/m3"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/txtvalor"
@@ -55,9 +61,11 @@
             <TextView
                 android:id="@+id/txtvalor"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="28dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="5dp"
                 android:text="Bueno"
                 android:textColor="#7FD15D"
                 android:textSize="20sp"
@@ -69,7 +77,10 @@
                 android:id="@+id/txttipo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:layout_marginStart="18dp"
+                android:layout_marginTop="11dp"
+                android:layout_toEndOf="@+id/txthora"
                 android:text="CO2"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/txthora"
