--- a/src/AppBeacon/app/src/main/res/layout/card_medicion.xml
+++ b/src/AppBeacon/app/src/main/res/layout/card_medicion.xml
@@ -39,6 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/textView35"
+                android:layout_marginStart="6dp"
                 android:layout_toEndOf="@+id/textView35"
                 android:text="15:35"
                 android:textSize="16sp"
