--- a/src/AppBeacon/app/src/main/res/layout/activity_info_contaminante.xml
+++ b/src/AppBeacon/app/src/main/res/layout/activity_info_contaminante.xml
@@ -13,6 +13,7 @@
      <ScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
+
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
@@ -26,12 +27,12 @@
                  android:layout_alignParentStart="true"
                  android:layout_alignParentTop="true"
                  android:layout_alignParentEnd="true"
+                 android:layout_gravity="center_horizontal"
                  android:layout_marginTop="16dp"
                  android:fontFamily="@font/montserrat"
                  android:gravity="center"
                  android:text="Información de los gases contaminante"
                  android:textSize="20sp"
-                 android:layout_gravity="center_horizontal"
 
                  android:textStyle="bold"
                  app:layout_constraintEnd_toEndOf="parent"
@@ -45,14 +46,13 @@
                  android:layout_height="56dp"
                  android:layout_below="@+id/textView13"
                  android:layout_alignParentStart="true"
+                 android:layout_gravity="center_horizontal"
                  android:layout_marginTop="30dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/textView13"
-                 app:srcCompat="@drawable/oildrill"
-                 android:layout_gravity="center_horizontal"
-                 />
+                 app:srcCompat="@drawable/oildrill" />
 
              <TextView
                  android:id="@+id/textView18"
@@ -61,6 +61,7 @@
                  android:layout_above="@+id/textView20"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentEnd="true"
+                 android:layout_gravity="center_horizontal"
                  android:layout_marginTop="8dp"
                  android:fontFamily="@font/montserrat"
                  android:text="Monóxido de azufre (SO):"
@@ -69,9 +70,7 @@
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
-                 app:layout_constraintTop_toBottomOf="@+id/imageView7"
-                 android:layout_gravity="center_horizontal"
-                 />
+                 app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
              <TextView
                  android:id="@+id/textView19"
@@ -147,14 +146,13 @@
                  android:layout_height="56dp"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentTop="true"
+                 android:layout_gravity="center_horizontal"
                  android:layout_marginTop="30dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/textView19"
-                 app:srcCompat="@drawable/trafico"
-                 android:layout_gravity="center_horizontal"
-                 />
+                 app:srcCompat="@drawable/trafico" />
 
              <TextView
                  android:id="@+id/textView14"
@@ -163,6 +161,7 @@
                  android:layout_above="@+id/textView19"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentEnd="true"
+                 android:layout_gravity="center_horizontal"
                  android:layout_marginTop="8dp"
                  android:fontFamily="@font/montserrat"
                  android:text="Dióxido de nitrógeno (NO2): "
@@ -171,9 +170,7 @@
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
-                 app:layout_constraintTop_toBottomOf="@+id/imageView9"
-                 android:layout_gravity="center_horizontal"
-                 />
+                 app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
              <TextView
                  android:id="@+id/textView122"
@@ -190,8 +187,7 @@
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
-                 app:layout_constraintTop_toBottomOf="@+id/textView14"
-                 />
+                 app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
              <TextView
                  android:id="@+id/textView123"
@@ -208,8 +204,7 @@
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
-                 app:layout_constraintTop_toBottomOf="@+id/textView122"
-                 />
+                 app:layout_constraintTop_toBottomOf="@+id/textView122" />
 
              <TextView
                  android:id="@+id/textView124"
@@ -226,8 +221,7 @@
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
-                 app:layout_constraintTop_toBottomOf="@+id/textView123"
-                 />
+                 app:layout_constraintTop_toBottomOf="@+id/textView123" />
 
              <TextView
                  android:id="@+id/textView125"
@@ -244,8 +238,7 @@
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
-                 app:layout_constraintTop_toBottomOf="@+id/textView124"
-                 />
+                 app:layout_constraintTop_toBottomOf="@+id/textView124" />
 
              <ImageView
                  android:id="@+id/imageView5"
@@ -253,14 +246,13 @@
                  android:layout_height="56dp"
                  android:layout_below="@+id/imageView7"
                  android:layout_alignParentStart="true"
+                 android:layout_gravity="center_horizontal"
                  android:layout_marginTop="30dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/textView20"
-                 app:srcCompat="@drawable/contaminacion"
-                 android:layout_gravity="center_horizontal"
-                 />
+                 app:srcCompat="@drawable/contaminacion" />
 
              <TextView
                  android:id="@+id/textView12"
@@ -269,10 +261,10 @@
                  android:layout_above="@+id/textView21"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentEnd="true"
+                 android:layout_gravity="center_horizontal"
                  android:layout_marginTop="8dp"
                  android:fontFamily="@font/montserrat"
                  android:text="Dióxido de carbono (CO2): "
-                 android:layout_gravity="center_horizontal"
 
                  android:textSize="16sp"
                  android:textStyle="bold"
@@ -355,14 +347,13 @@
                  android:layout_height="56dp"
                  android:layout_below="@+id/imageView7"
                  android:layout_alignParentStart="true"
+                 android:layout_gravity="center_horizontal"
                  android:layout_marginTop="30dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/textView21"
-                 app:srcCompat="@drawable/capadeozono"
-                 android:layout_gravity="center_horizontal"
-                 />
+                 app:srcCompat="@drawable/capadeozono" />
 
              <TextView
                  android:id="@+id/textView11"
@@ -371,6 +362,7 @@
                  android:layout_above="@+id/textView22"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentEnd="true"
+                 android:layout_gravity="center_horizontal"
                  android:layout_marginTop="8dp"
                  android:fontFamily="@font/montserrat"
                  android:text="Ozono (O3): "
@@ -379,9 +371,7 @@
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
-                 app:layout_constraintTop_toBottomOf="@+id/imageView6"
-                 android:layout_gravity="center_horizontal"
-                 />
+                 app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
              <TextView
                  android:id="@+id/textView130"
@@ -450,7 +440,6 @@
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/textView132" />
-
 
 
          </LinearLayout>
