--- a/src/AppBeacon/app/src/main/res/xml/root_preferences.xml
+++ b/src/AppBeacon/app/src/main/res/xml/root_preferences.xml
@@ -43,5 +43,7 @@
 
 
     </PreferenceCategory>
+    <PreferenceCategory app:title="@string/title_deteccionDeNodo"
+        app:iconSpaceReserved="false"/>
 
 </PreferenceScreen>
