--- a/src/AppBeacon/app/src/main/res/values/colors.xml
+++ b/src/AppBeacon/app/src/main/res/values/colors.xml
@@ -10,5 +10,7 @@
     <color name="blue">#CBE3E6</color>
     <color name="bar">#5f9ea0</color>
     <color name="gris">#1F2525</color>
+    <color name="naranja">#e67812</color>
+    <color name="rojo">#ad0c1a</color>
 
 </resources>
