--- a/src/AppBeacon/app/src/main/res/layout/card_medicion.xml
+++ b/src/AppBeacon/app/src/main/res/layout/card_medicion.xml
@@ -23,32 +23,32 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/txthora"
+                android:id="@+id/textViewHoraUltima"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/txtmedicion"
+                android:layout_alignTop="@+id/textViewMedicionUltima"
                 android:layout_marginStart="25dp"
-                android:layout_toEndOf="@+id/txtmedicion"
+                android:layout_toEndOf="@+id/textViewMedicionUltima"
                 android:text="15:35"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/textView35"
                 app:layout_constraintTop_toTopOf="@+id/textView35" />
 
             <TextView
-                android:id="@+id/txtmedicion"
+                android:id="@+id/textViewMedicionUltima"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/txtvalor"
+                android:layout_alignTop="@+id/textViewValorUtima"
                 android:layout_marginStart="35dp"
                 android:layout_marginTop="6dp"
-                android:layout_toEndOf="@+id/txtvalor"
+                android:layout_toEndOf="@+id/textViewValorUtima"
                 android:text="25  µg/m3"
                 android:textSize="16sp"
-                app:layout_constraintStart_toEndOf="@+id/txtvalor"
-                app:layout_constraintTop_toTopOf="@+id/txtvalor" />
+                app:layout_constraintStart_toEndOf="@+id/textViewValorUtima"
+                app:layout_constraintTop_toTopOf="@+id/textViewValorUtima" />
 
             <TextView
-                android:id="@+id/txtvalor"
+                android:id="@+id/textViewValorUtima"
                 android:layout_width="wrap_content"
                 android:layout_height="28dp"
                 android:layout_alignParentStart="true"
@@ -69,11 +69,11 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="11dp"
-                android:layout_toEndOf="@+id/txthora"
+                android:layout_toEndOf="@+id/textViewHoraUltima"
                 android:text="CO2"
                 android:textSize="16sp"
-                app:layout_constraintStart_toEndOf="@+id/txthora"
-                app:layout_constraintTop_toTopOf="@+id/txthora" />
+                app:layout_constraintStart_toEndOf="@+id/textViewHoraUltima"
+                app:layout_constraintTop_toTopOf="@+id/textViewHoraUltima" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
