--- a/src/AppBeacon/app/src/main/res/layout/activity_register.xml
+++ b/src/AppBeacon/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="311dp"
-            android:layout_height="698dp"
+            android:layout_height="750dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="30dp"
@@ -275,11 +275,13 @@
                 <Button
                     android:id="@+id/btnRegistro"
                     android:layout_width="178dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/checkBoxDatos"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginStart="97dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="90dp"
                     android:layout_marginBottom="15dp"
                     android:backgroundTint="#5f9ea0"
@@ -304,6 +306,26 @@
                     android:textColor="#024A44"
                     android:textSize="14sp"
                     android:textStyle="bold" />
+
+                <CheckBox
+                    android:id="@+id/checkBoxDatos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/etMatriculaRegis"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="15dp" />
+
+                <TextView
+                    android:id="@+id/tvCondicionesDatos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/checkBoxDatos"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_toEndOf="@+id/checkBoxDatos"
+                    android:text="He leido y acepto las condiciones de tratamiento de datos"
+                    android:textColor="#024A44" />
 
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
